[build-system]
requires = ["setuptools>=45","wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d-stress"
version = "0.1.0"
description = "DDoS simulation & Educational Tool"
# readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "psutil>=5.9.0",
]

[project.scripts]
d-stress = "src.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]